Реализован метод POST /categories для добавления категории(доходов/расходов) в свой аккаунт
